<resources>
    <string name="app_name">M-Comic</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- Login Activity -->
    <string name="emailFilled">Email must be filled</string>
    <string name="emailFormat">Email must be in email format</string>
    <string name="passFilled">Password must be filled</string>
    <string name="invalidCredential">Invalid Credential</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="register_now">Register now!</string>

    <!-- Register Activity -->
    <string name="create_your_account">Create your\naccount</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_re_password">Confirm password</string>
    <string name="username_failed">Username must less than 10 characters</string>
    <string name="username_filled">Username must be filled</string>
    <string name="password_failed">Password must at least 5 characters</string>
    <string name="re_pass_failed">Confirm password must be same with password</string>
    <string name="sign_up_error">Register Error</string>

    <!-- Navigation Activity -->
    <string name="home" translatable="false">Home</string>
    <string name="search" translatable="false">Search</string>
    <string name="upload" translatable="false">Upload</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="logout">Logout</string>
    <string name="sorry_only_admin_that_can_have_materials">Sorry, only admin that can have materials</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="updateProfile">Update</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="update_your_profile">Update your profile</string>

    <!-- Edit Profile Activity -->
    <string name="edit_success">Profile Updated!</string>
    <string name="loading">Loading…</string>
    <string name="testing_text" translatable="false">Testing Text</string>
    <string name="djohan_effendy" translatable="false">Djohan Effendy</string>
    <string name="role_admin">Role Admin</string>
    <string name="manage_user">Manage User</string>
    <string name="upload_material">Upload Material</string>
    <string name="upload_now">Upload Now</string>
    <string name="sorry_guest_can_t_upload_material">Sorry, guest can\'t upload material</string>
    <string name="cant_play_sound">This comic doesn\'t have sound</string>
    <string name="comic_name">Comic name</string>
    <string name="upload_your_comic">Upload your comic</string>
    <string name="choose_file">Choose Image</string>
    <string name="add_sound">Choose Sound</string>
    <string name="add_comic">Add Comic</string>
    <string name="comicNameFill">Comic name must be filled</string>
    <string name="fillComicAdd">Comic image must be chosen</string>
    <string name="uploadSuccess">Add Image Success</string>
    <string name="uploadSoundSuccess">Add Sound Success</string>
    <string name="uploadProgress">Please wait, still uploading…</string>
    <string name="do_you_want_to_add_another_material_into_this_comic">Do you want to add another material into this comic ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_add_sound_to_this_material">Do you want to add sound to this material ?</string>
    <string name="proceed">Proceed</string>

</resources>